--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,25 @@
 {
-  "dependencies": {
-    "lucide-react": "^0.563.0",
-    "socket.io-client": "^4.8.3",
-    "zustand": "^5.0.11"
-  }
+    "name": "game-frontend",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "socket.io-client": "^4.6.0",
+        "zustand": "^4.5.0",
+        "lucide-react": "^0.344.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.0",
+        "@vitejs/plugin-react-swc": "^3.5.0",
+        "typescript": "^5.2.2",
+        "vite": "^5.0.0"
+    }
 }
