--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "lucide-react": "^0.344.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^7.13.0",
         "socket.io-client": "^4.6.0",
-        "zustand": "^4.5.0",
-        "lucide-react": "^0.344.0"
+        "zustand": "^4.5.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.0",
