--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,22 +1,45 @@
-# Backend Dockerfile
+# Backend Dockerfile - Multi-stage build
+FROM node:22-alpine AS builder
+
+WORKDIR /app
+
+# Copy shared types
+COPY shared ./shared
+
+# Copy package files
+COPY backend/package*.json ./backend/
+
+WORKDIR /app/backend
+
+# Install ALL dependencies (including dev for TypeScript compilation)
+RUN npm ci
+
+# Copy backend source
+COPY backend/ .
+
+# Build TypeScript
+RUN npm run build
+
+# Production stage
 FROM node:22-alpine
 
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
+# Copy shared types
+COPY shared ./shared
 
-# Install dependencies
+# Copy package files and install production deps only
+COPY backend/package*.json ./backend/
+
+WORKDIR /app/backend
+
 RUN npm ci --only=production
 
-# Copy shared types
-COPY ../shared /app/shared
-
-# Copy backend source
-COPY . .
+# Copy compiled JavaScript from builder
+COPY --from=builder /app/backend/dist ./dist
 
 # Expose backend port
 EXPOSE 3001
 
-# Start the server
-CMD ["npm", "start"]
+# Start the server with compiled JS
+CMD ["node", "dist/backend/server.js"]
