--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,17 +3,19 @@ FROM node:22-alpine AS builder
 
 WORKDIR /app
 
+# Copy shared types
+COPY shared ./shared
+
 # Copy package files
-COPY package*.json ./
+COPY frontend/package*.json ./frontend/
+
+WORKDIR /app/frontend
 
 # Install dependencies
 RUN npm ci
 
-# Copy shared types
-COPY ../shared /app/shared
-
 # Copy frontend source
-COPY . .
+COPY frontend/ .
 
 # Build the app
 RUN npm run build
@@ -22,10 +24,10 @@ RUN npm run build
 FROM nginx:alpine
 
 # Copy built files from builder
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/frontend/dist /usr/share/nginx/html
 
 # Copy nginx configuration
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose frontend port
 EXPOSE 80
