--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@supabase/supabase-js": "^2.95.3",
         "cors": "^2.8.6",
+        "dotenv": "^17.3.1",
         "express": "^5.2.1",
+        "jsonwebtoken": "^9.0.3",
         "socket.io": "^4.8.3",
         "uuid": "^13.0.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^25.2.3",
         "@types/uuid": "^10.0.0",
         "ts-node": "^10.9.2",
